--- a/bookstore-servicemesh-library-infrastructure/pom.xml
+++ b/bookstore-servicemesh-library-infrastructure/pom.xml
@@ -49,6 +49,11 @@
             <version>1.0.10.RELEASE</version>
         </dependency>
         <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-rsa</artifactId>
+            <version>1.0.9.RELEASE</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth2</artifactId>
             <version>2.3.5.RELEASE</version>
