--- a/bookstore-istio-manifests/bookstore-authentication-policy.yaml
+++ b/bookstore-istio-manifests/bookstore-authentication-policy.yaml
@@ -15,6 +15,11 @@ metadata:
 spec:
   jwtRules:
     - issuer: "icyfenix@gmail.com"
+      # Envoy默认只认“Bearer”作为JWT前缀，之前其他地方用的都是小写，这里专门兼容一下
+      fromHeaders:
+        - name: Authorization
+          prefix: "bearer "
+      # 在rsa-key目录下放了用来生成这个JWKS的证书，最初是用java keytool生成的jks格式，一般转jwks都是用pkcs12或者pem格式，为方便使用也一起附带了
       jwks: |
         {
             "keys": [
