--- a/bookstore.yml
+++ b/bookstore.yml
@@ -624,6 +624,15 @@ spec:
     mode: STRICT
 ---
 apiVersion: security.istio.io/v1beta1
+kind: PeerAuthentication
+metadata:
+  name: authentication-mtls
+  namespace: bookstore-servicemesh
+spec:
+  mtls:
+    mode: STRICT
+---
+apiVersion: security.istio.io/v1beta1
 kind: RequestAuthentication
 metadata:
   name: authentication-jwt-token
@@ -631,6 +640,11 @@ metadata:
 spec:
   jwtRules:
     - issuer: "icyfenix@gmail.com"
+      # Envoy默认只认“Bearer”作为JWT前缀，之前其他地方用的都是小写，这里专门兼容一下
+      fromHeaders:
+        - name: Authorization
+          prefix: "bearer "
+      # 在rsa-key目录下放了用来生成这个JWKS的证书，最初是用java keytool生成的jks格式，一般转jwks都是用pkcs12或者pem格式，为方便使用也一起附带了
       jwks: |
         {
             "keys": [
